--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
-    "nodemon": "^1.19.4",
-    "update": "^0.7.4"
+    "nodemon": "^2.0.19",
+    "update": "^0.4.2"
   }
 }
